@@ -2,6 +2,7 @@
 
 = 8.8.1 - xxxx-xx-xx =
 * Tweak - Disables APMs when using the legacy checkout experience due Stripe deprecation by October 29, 2024.
+* Fix - Prevent marking orders on-hold with order note "Process order to take payment" when the payment has failed.
 
 = 8.8.0 - 2024-10-17 =
 * Fix - Update URL and path constants to support use of symlinked plugin.
